--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div class="content-wrapper">
+<div class="container">
     <header class="main-header">
         <div class="header-menu-wrapper">
 
@@ -29,7 +29,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="nerds-catalog.html">
                             Магазин
                         </a>
                     </li>
@@ -184,7 +184,7 @@
     </div>
 
 </div>
-<div class="content-wrapper">
+<div class="container">
 
     <footer class="main-footer">
         <h2 class="visually-hidden">Подвал</h2>
