--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Учебный проект Nerds</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
