--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -125,25 +125,25 @@
                 ул. Б. Конюшенная, д. 19/8
             </b>
             <b>тел. 8 812 450-25-25</b>
-            <a class="button address-button" href="form.html">Напишите нам</a>
+            <a class="button address-button red" href="form.html">Напишите нам</a>
         </div>
 
     </div>
 
-    <footer class="main-footer">
+    <footer class="container main-footer">
         <h2 class="visually-hidden">Подвал</h2>
         <ul class="footer-left social-networks">
-            <li class="social-vkontakte">
+            <li class="social-network social-vkontakte">
                 <a href="#">
                     Вконтакте
                 </a>
             </li>
-            <li class="social-facebook">
+            <li class="social-network social-facebook">
                 <a href="#">
                     Фэйсбук
                 </a>
             </li>
-            <li class="social-instagram">
+            <li class="social-network social-instagram">
                 <a href="#">
                     Инстаграм
                 </a>
@@ -151,7 +151,7 @@
         </ul>
 
         <div class="footer-right">
-            <b class="footer-right-caption">Давайте дружить, это выгодно!</b>
+            <p class="footer-right-caption">Давайте дружить, это выгодно!</p>
             <span>Скидка 10% для друзей из социальных сетей.</span>
         </div>
     </footer>
