--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -10,13 +10,16 @@
 </head>
 
 <body>
-<div class="container">
-    <header class="main-header">
+
+<header class="main-header">
+    <div class="container">
         <h2 class="visually-hidden">Шапка</h2>
         <div class="header-menu-wrapper">
 
             <span class="main-logo">
-                <img src="img/nerds-logo.svg" width="160" height="70" alt="" class="logo">
+                <a href="index.html">
+                    <img src="img/nerds-logo.svg" width="160" height="70" alt="" class="logo">
+                </a>
             </span>
 
             <nav class="main-navigation">
@@ -32,7 +35,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="nerds-catalog.html">
                             Магазин
                         </a>
                     </li>
@@ -52,13 +55,17 @@
                 </li>
             </ul>
         </div>
-
-        <h1 class="page-description">Магазин готовых шаблонов</h1>
-    </header>
-
-    <main>
+        <h1 class="page-description">
+            Магазин готовых шаблонов
+        </h1>
+    </div>
+</header>
+<div class="container">
+    <main class="main-part">
         <form action="form.php" method="GET">
             <div class="range-filter">
+                <legend class="range-price">Стоимость:</legend>
+
                 <div class="range-controls">
                     <div class="scale">
                         <div class="bar" style="margin-left: 20%; width: 30%"></div>
@@ -70,13 +77,76 @@
                     <label class="min-price">от <input name="min-price" type="text" value="0"></label>
                     <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
                 </div>
+
             </div>
 
             <!-- другие элементы формы -->
-
+            <fieldset class="filter-item">
+                <legend class="range-price">Сетка:</legend>
+                <ul class="filter-item-position">
+                    <li class="filter-group filter-group-radio">
+                        <input class="visually-hidden" id="fat0" type="radio" name="fat-content" value="0">
+                        <label class="filter-label" for="fat0">Адаптивная</label>
+                    </li>
+                    <li class="filter-group filter-group-radio">
+                        <input class="visually-hidden" id="fat10" type="radio" name="fat-content" value="0" checked>
+                        <label class="filter-label" for="fat10">Фиксированная</label>
+                    </li>
+                    <li class="filter-group filter-group-radio">
+                        <input class="visually-hidden" id="fat30" type="radio" name="fat-content" value="0">
+                        <label class="filter-label" for="fat30">Резиновая</label>
+                    </li>
+                </ul>
+            </fieldset>
+            <fieldset class="filter-item">
+                <legend class="range-price">Особенности:</legend>
+                <ul class="filter-item-products">
+                    <li class="filter-group filter-group-checkbox">
+                        <input class="visually-hidden" id="chocolate" type="checkbox" name="chocolate-content" value="chocolate"
+                               checked>
+                        <label class="filter-label" for="chocolate">Слайдер</label>
+                    </li>
+                    <li class="filter-group filter-group-checkbox">
+                        <input class="visually-hidden" id="sugar" type="checkbox" name="sugar-content" value="sugar">
+                        <label class="filter-label" for="sugar">Блок преимуществ</label>
+                    </li>
+                    <li class="filter-group filter-group-checkbox">
+                        <input class="visually-hidden" id="fruits" type="checkbox" name="fruits-content" value="fruits" checked>
+                        <label class="filter-label" for="fruits">Новости</label>
+                    </li>
+                    <li class="filter-group filter-group-checkbox">
+                        <input class="visually-hidden" id="syrup" type="checkbox" name="syrup-content" value="syrup">
+                        <label class="filter-label" for="syrup">Галерея</label>
+                    </li>
+                    <li class="filter-group filter-group-checkbox">
+                        <input class="visually-hidden" id="jam" type="checkbox" name="jam-content" value="jam">
+                        <label class="filter-label" for="jam">Корзина</label>
+                    </li>
+                </ul>
+            </fieldset>
+            <button class="button-accept" type="submit">Показать</button>
         </form>
-
         <section class="catalog">
+            <div class="sorting">
+                <h2 class="range-price">Сортировать:</h2>
+                <ul>
+                    <li>
+                        <a href="#">
+                            По цене
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            По типу
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            По названию
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <article class="catalog-item">
                 <a href="#" class="catalog-item-link">
                     <img class="catalog-item-picture" src="img/catalog-item-sedona.jpg">
@@ -109,53 +179,48 @@
             </article>
         </section>
     </main>
-
-    <div class="map">
-
-        <h2 class="visually-hidden">Карта</h2>
-        <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2826.436348218541!2d30.321275674889126!3d59.9389069423371!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1487338810378"
-                allowfullscreen=""></iframe>
-        <img src="img/map.jpg" width="1200" height="430"
-             alt="Студия по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
-
-        <div class="address">
-            <span>NЁRDS DESIGN STUDIO</span>
-            <b>191186, Санкт-Петербург, <br>
-                ул. Б. Конюшенная, д. 19/8
-            </b>
-            <b>тел. 8 812 450-25-25</b>
-            <a class="button address-button red" href="form.html">Напишите нам</a>
-        </div>
-
-    </div>
-
-    <footer class="container main-footer">
-        <h2 class="visually-hidden">Подвал</h2>
-        <ul class="footer-left social-networks">
-            <li class="social-network social-vkontakte">
-                <a href="#">
-                    Вконтакте
-                </a>
-            </li>
-            <li class="social-network social-facebook">
-                <a href="#">
-                    Фэйсбук
-                </a>
-            </li>
-            <li class="social-network social-instagram">
-                <a href="#">
-                    Инстаграм
-                </a>
-            </li>
-        </ul>
-
-        <div class="footer-right">
-            <p class="footer-right-caption">Давайте дружить, это выгодно!</p>
-            <span>Скидка 10% для друзей из социальных сетей.</span>
-        </div>
-    </footer>
-
 </div>
+<div class="map">
+    <h2 class="visually-hidden">Карта</h2>
+    <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2826.436348218541!2d30.321275674889126!3d59.9389069423371!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1487338810378"
+            allowfullscreen=""></iframe>
+    <img src="img/map.jpg" width="1200" height="430"
+         alt="Студия по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+
+    <div class="address">
+        <span>NЁRDS DESIGN STUDIO</span>
+        <b>191186, Санкт-Петербург, <br>
+            ул. Б. Конюшенная, д. 19/8
+        </b>
+        <b>тел. 8 812 450-25-25</b>
+        <a class="button address-button red" href="form.html">Напишите нам</a>
+    </div>
+</div>
+<footer class="container main-footer">
+    <h2 class="visually-hidden">Подвал</h2>
+    <ul class="footer-left social-networks">
+        <li class="social-network social-vkontakte">
+            <a href="#">
+                Вконтакте
+            </a>
+        </li>
+        <li class="social-network social-facebook">
+            <a href="#">
+                Фэйсбук
+            </a>
+        </li>
+        <li class="social-network social-instagram">
+            <a href="#">
+                Инстаграм
+            </a>
+        </li>
+    </ul>
+
+    <div class="footer-right">
+        <p class="footer-right-caption">Давайте дружить, это выгодно!</p>
+        <span>Скидка 10% для друзей из социальных сетей.</span>
+    </div>
+</footer>
 </body>
 </html>
