Добавлено несколько декоративных элементов

--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -85,11 +85,11 @@
                 <legend class="range-price">Сетка:</legend>
                 <ul class="filter-item-position">
                     <li class="filter-group filter-group-radio">
-                        <input class="visually-hidden" id="fat0" type="radio" name="fat-content" value="0">
+                        <input class="visually-hidden" id="fat0" type="radio" name="fat-content" value="0" checked>
                         <label class="filter-label" for="fat0">Адаптивная</label>
                     </li>
                     <li class="filter-group filter-group-radio">
-                        <input class="visually-hidden" id="fat10" type="radio" name="fat-content" value="0" checked>
+                        <input class="visually-hidden" id="fat10" type="radio" name="fat-content" value="0">
                         <label class="filter-label" for="fat10">Фиксированная</label>
                     </li>
                     <li class="filter-group filter-group-radio">
@@ -102,7 +102,8 @@
                 <legend class="range-price">Особенности:</legend>
                 <ul class="filter-item-products">
                     <li class="filter-group filter-group-checkbox">
-                        <input class="visually-hidden" id="chocolate" type="checkbox" name="chocolate-content" value="chocolate"
+                        <input class="visually-hidden" id="chocolate" type="checkbox" name="chocolate-content"
+                               value="chocolate"
                                checked>
                         <label class="filter-label" for="chocolate">Слайдер</label>
                     </li>
@@ -111,7 +112,8 @@
                         <label class="filter-label" for="sugar">Блок преимуществ</label>
                     </li>
                     <li class="filter-group filter-group-checkbox">
-                        <input class="visually-hidden" id="fruits" type="checkbox" name="fruits-content" value="fruits" checked>
+                        <input class="visually-hidden" id="fruits" type="checkbox" name="fruits-content" value="fruits"
+                               checked>
                         <label class="filter-label" for="fruits">Новости</label>
                     </li>
                     <li class="filter-group filter-group-checkbox">
@@ -143,6 +145,20 @@
                     <li>
                         <a href="#">
                             По названию
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                                <path fill="#231F20" d="M5.5 10L0 0h11"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                                <path fill="#a6a6a6" d="M5.5 0L0 10h11z"/>
+                            </svg>
                         </a>
                     </li>
                 </ul>
