--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
             <span>С 2004 года любим точность во всем:</span>
             <div class="our-stats">
                 <div class="stats-list">
-                    <b>146%</b>
+                    <b>146<sup>%</sup></b>
                     <p>Уровень самоотдачи</p>
                 </div>
                 <div class="stats-list">
-                    <b>100%</b>
+                    <b>100<sup>%</sup></b>
                     <p>Соблюдение сроков</p>
                 </div>
                 <div class="stats-list">
-                    <b>50%</b>
+                    <b>50<sup>%</sup></b>
                     <p>Минимальная предоплата</p>
                 </div>
             </div>
