новые исправления, близко к завершению проекта

--- a/index.html
+++ b/index.html
@@ -157,22 +157,22 @@
 
     <h2 class="visually-hidden">Наши клиенты</h2>
     <ul class="our-clients">
-        <li>
+        <li class="clients client-1">
             <a href="https://htmlacademy.ru">
                 <img src="img/htmlacademy-logo.png" alt="htmlacademy">
             </a>
         </li>
-        <li>
+        <li class="clients client-2">
             <a href="">
                 <img src="img/barbershop-logo.png" alt="barbershop">
             </a>
         </li>
-        <li>
+        <li class="clients client-3">
             <a href="#">
                 <img src="img/pink-logo.png" alt="pink">
             </a>
         </li>
-        <li>
+        <li class="client-4">
             <a href="#">
                 <img src="img/mishka-logo.png" alt="mishka">
             </a>
