--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -34,7 +34,7 @@
                             Клиенты
                         </a>
                     </li>
-                    <li>
+                    <li class="site-menu-link-active">
                         <a href="nerds-catalog.html">
                             Магазин
                         </a>
@@ -133,7 +133,7 @@
                 <h2 class="range-price">Сортировать:</h2>
                 <ul>
                     <li>
-                        <a href="#">
+                        <a class="sorting-active" href="#">
                             По цене
                         </a>
                     </li>
@@ -163,35 +163,65 @@
                     </li>
                 </ul>
             </div>
-            <article class="catalog-item">
+            <article class="catalog-item-1">
                 <a href="#" class="catalog-item-link">
                     <img class="catalog-item-picture" src="img/catalog-item-sedona.jpg">
                 </a>
+                <div class="site-promo-wrapper">
+                    <h3 class="catalog-item-title">Sedona</h3>
+                    <p>Информационный сайт для туристов</p>
+                    <a class="button" href="#">9 900 руб.</a>
+                </div>
             </article>
             <article class="catalog-item">
                 <a href="#" class="catalog-item-link">
                     <img class="catalog-item-picture" src="img/catalog-item-pink.jpg">
                 </a>
+                <div class="site-promo-wrapper">
+                    <h3 class="catalog-item-title">Pink app</h3>
+                    <p>Продуктовый лендинг приложения для iOS и Android</p>
+                    <a class="button" href="#">9 900 руб.</a>
+                </div>
             </article>
             <article class="catalog-item">
                 <a href="#" class="catalog-item-link">
                     <img class="catalog-item-picture" src="img/catalog-item-barbershop.jpg">
                 </a>
+                <div class="site-promo-wrapper">
+                    <h3 class="catalog-item-title">Barbershop</h3>
+                    <p>Сайт салоны красоты. Для мужчин, да.</p>
+                    <a class="button" href="#">9 900 руб.</a>
+                </div>
             </article>
             <article class="catalog-item">
                 <a href="#" class="catalog-item-link">
                     <img class="catalog-item-picture" src="img/catalog-item-mishka.jpg">
                 </a>
+                <div class="site-promo-wrapper">
+                    <h3 class="catalog-item-title">Mishka</h3>
+                    <p>Интернет-магазин вязаных игрушек</p>
+                    <a class="button" href="#">9 900 руб.</a>
+                </div>
             </article>
             <article class="catalog-item">
                 <a href="#" class="catalog-item-link">
                     <img class="catalog-item-picture" src="img/catalog-item-aplus.jpg">
                 </a>
+                <div class="site-promo-wrapper">
+                    <h3 class="catalog-item-title">A plus</h3>
+                    <p>Лендинг курсов повышения квалификации</p>
+                    <a class="button" href="#">9 900 руб.</a>
+                </div>
             </article>
             <article class="catalog-item">
                 <a href="#" class="catalog-item-link">
                     <img class="catalog-item-picture" src="img/catalog-item-kvast.jpg">
                 </a>
+                <div class="site-promo-wrapper">
+                    <h3 class="catalog-item-title">Kbact</h3>
+                    <p>Промо-сайт нового производителя крафтового кваса</p>
+                    <a class="button" href="#">9 900 руб.</a>
+                </div>
             </article>
         </section>
     </main>
