добавление модального окна

--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -268,5 +268,30 @@
         <span>Скидка 10% для друзей из социальных сетей.</span>
     </div>
 </footer>
+<section class="form modal-login">
+    <h2 class="visually-hidden">Регистрационная форма</h2>
+    <p>Напишите нам</p>
+    <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+        <div class="form-group">
+            <input class="form-input form-input-1" id="text" type="text" name="login">
+            <label class="form-label" for="text">Ваше имя:</label>
+            <label class="form-label-inside" for="text" type="text">Представьтесь пожалуйста</label>
+        </div>
+        <div class="form-group">
+            <input class="form-input form-input-2" id="email-answer" type="email" name="email">
+            <label class="form-label" for="email-answer">Ваш e-mail:</label>
+            <label class="form-label-inside" for="text" type="text">Для отправки ответа</label>
+        </div>
+        <div class="form-group form-input-3">
+            <textarea class="form-input" name="comment" id="comment"></textarea>
+            <label class="form-label" for="comment">Текст письма:</label>
+            <label class="form-label-inside" for="text" type="text">В свободной форме</label>
+        </div>
+        <button class="button" type="submit">Отправить</button>
+    </form>
+    <button class="close-button" type="button">Закрыть</button>
+</section>
+
+<script src="js/script.js"></script>
 </body>
 </html>
