--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <title>Учебный проект Nerds</title>
@@ -8,9 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-
 <header class="main-header">
     <div class="container">
         <h2 class="visually-hidden">Шапка</h2>
@@ -65,7 +62,6 @@
         <form action="form.php" method="GET">
             <div class="range-filter">
                 <legend class="range-price">Стоимость:</legend>
-
                 <div class="range-controls">
                     <div class="scale">
                         <div class="bar" style="margin-left: 20%; width: 30%"></div>
@@ -77,10 +73,7 @@
                     <label class="min-price">от <input name="min-price" type="text" value="0"></label>
                     <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
                 </div>
-
             </div>
-
-            <!-- другие элементы формы -->
             <fieldset class="filter-item">
                 <legend class="range-price">Сетка:</legend>
                 <ul class="filter-item-position">
@@ -170,7 +163,7 @@
                 <div class="site-promo-wrapper">
                     <h3 class="catalog-item-title">Sedona</h3>
                     <p>Информационный сайт для туристов</p>
-                    <a class="button" href="#">9 900 руб.</a>
+                    <a class="button red" href="#">9 900 руб.</a>
                 </div>
             </article>
             <article class="catalog-item">
@@ -180,7 +173,7 @@
                 <div class="site-promo-wrapper">
                     <h3 class="catalog-item-title">Pink app</h3>
                     <p>Продуктовый лендинг приложения для iOS и Android</p>
-                    <a class="button" href="#">9 900 руб.</a>
+                    <a class="button red" href="#">9 900 руб.</a>
                 </div>
             </article>
             <article class="catalog-item">
@@ -190,7 +183,7 @@
                 <div class="site-promo-wrapper">
                     <h3 class="catalog-item-title">Barbershop</h3>
                     <p>Сайт салоны красоты. Для мужчин, да.</p>
-                    <a class="button" href="#">9 900 руб.</a>
+                    <a class="button red" href="#">9 900 руб.</a>
                 </div>
             </article>
             <article class="catalog-item">
@@ -200,7 +193,7 @@
                 <div class="site-promo-wrapper">
                     <h3 class="catalog-item-title">Mishka</h3>
                     <p>Интернет-магазин вязаных игрушек</p>
-                    <a class="button" href="#">9 900 руб.</a>
+                    <a class="button red" href="#">9 900 руб.</a>
                 </div>
             </article>
             <article class="catalog-item">
@@ -210,7 +203,7 @@
                 <div class="site-promo-wrapper">
                     <h3 class="catalog-item-title">A plus</h3>
                     <p>Лендинг курсов повышения квалификации</p>
-                    <a class="button" href="#">9 900 руб.</a>
+                    <a class="button red" href="#">9 900 руб.</a>
                 </div>
             </article>
             <article class="catalog-item">
@@ -220,7 +213,7 @@
                 <div class="site-promo-wrapper">
                     <h3 class="catalog-item-title">Kbact</h3>
                     <p>Промо-сайт нового производителя крафтового кваса</p>
-                    <a class="button" href="#">9 900 руб.</a>
+                    <a class="button red" href="#">9 900 руб.</a>
                 </div>
             </article>
         </section>
@@ -233,7 +226,6 @@
             allowfullscreen=""></iframe>
     <img src="img/map.jpg" width="1200" height="430"
          alt="Студия по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
-
     <div class="address">
         <span>NЁRDS DESIGN STUDIO</span>
         <b>191186, Санкт-Петербург, <br>
@@ -262,7 +254,6 @@
             </a>
         </li>
     </ul>
-
     <div class="footer-right">
         <p class="footer-right-caption">Давайте дружить, это выгодно!</p>
         <span>Скидка 10% для друзей из социальных сетей.</span>
@@ -291,7 +282,6 @@
     </form>
     <button class="close-button" type="button">Закрыть</button>
 </section>
-
 <script src="js/script.js"></script>
 </body>
 </html>
