--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <label class="form-label" for="comment">Текст письма:</label>
             <label class="form-label-inside" for="text" type="text">В свободной форме</label>
         </div>
-        <button class="button" type="submit">Отправить</button>
+        <button class="button red" type="submit">Отправить</button>
     </form>
     <button class="close-button" type="button">Закрыть</button>
 </section>
