--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -216,6 +216,28 @@
                     <a class="button red" href="#">9 900 руб.</a>
                 </div>
             </article>
+            <ul class="pagination">
+                <li>
+                    <a href="#" class="pagination-button pagination-current">
+                        1
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="pagination-button">
+                        2
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="pagination-button">
+                        3
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="pagination-button pagination-button-next">
+                        Следующая
+                    </a>
+                </li>
+            </ul>
         </section>
     </main>
 </div>
@@ -278,7 +300,7 @@
             <label class="form-label" for="comment">Текст письма:</label>
             <label class="form-label-inside" for="text" type="text">В свободной форме</label>
         </div>
-        <button class="button" type="submit">Отправить</button>
+        <button class="button red" type="submit">Отправить</button>
     </form>
     <button class="close-button" type="button">Закрыть</button>
 </section>
